[package]
name = "prasiolite-bb"
version = "0.0.0"
authors = ["QuietMisdreavus <victoria@quietmisdreavus.net>"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
